[package]
name = "limited-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl]
linker = "x86_64-unknown-linux-gnu-gcc"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
